Fix title spacing
changed spacing for text on index page
line spacing is now relative to text size

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ body {
 .general {
   background-color: #e5e7eb;
   gap: 18px;
+  align-items: stretch;
 }
 
 .content {
@@ -86,7 +87,7 @@ body {
   align-self: flex-start;
   padding-top: 26px;
   padding-bottom: 16px;
-  line-height: 25px;
+  line-height: 1.5;
 }
 .general .text .title {
   font-size: 36px;
@@ -103,7 +104,7 @@ body {
 .general img{
   object-fit: cover;
   width: 200px;
-  max-height: 200px
+  height: 200px;
 }
 
 /* Content */
